# extremal-python-dependencies

./: README.md  _typos.toml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint.yml  release.yml  test_latest_versions.yml  test_minimum_versions.yml
extremal_python_dependencies/: __init__.py  main.py
releasenotes/: config.yaml
releasenotes/notes/: support-min-version-spelling-d9cce49276a301bc.yaml  support-python-3.14-6fff937736de5abc.yaml
test/: __init__.py  conftest.py  test_cli.py  test_mapfuncs.py  test_process.py
