[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extremal-python-dependencies"
version = "0.1.0"
description = "A utility for installing extremal versions of dependencies for more robust testing"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.10"

dependencies = [
    "toml==0.10.2",
    "typer==0.19.1",
    "click==8.3.1",
]

[project.optional-dependencies]
dev = [
    "extremal-python-dependencies[test,lint]",
]
test = [
    "pytest>=7.4.4",
]
style = [
    "ruff==0.14.7",
    "typos>=1.20.0",
]
lint = [
    "extremal-python-dependencies[style]",
    "pydocstyle==6.3.0",
    "mypy==1.19.0",
    "pylint==4.0.4",
    "reno>=4.1",
    "types-toml~=0.10.8.20240310"
]

[tool.hatch.build.targets.wheel]
only-include = [
    "extremal_python_dependencies",
]

[tool.pylint.main]
py-version = "3.10"
disable = [
    "missing-function-docstring",
]

[project.scripts]
extremal-python-dependencies = "extremal_python_dependencies.main:main"
